# medical-study-app

./: .gitignore  MinerU  backend  cline_docs  docker-compose.yml  frontend  srs.md  temp_invalid.txt  test_env
backend/: .env  main.py  pyproject.toml  requirements.txt
cline_docs/: codebaseSummary.md  currentTask.md  projectRoadmap.md  techStack.md
frontend/: index.html
