[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["openhands <openhands@all-hands.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
celery = "^5.4.0"
python-multipart = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
